make more refactoring, create utils js, whre paste all utils fucntions for inject and wich one is using in popup, remove no needed permisions

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
 	"name": "Voxiom Community Updater",
 	"description": "Voxiom Community Updater",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"manifest_version": 3,
-	"permissions": ["declarativeContent", "browsingData", "tabs", "scripting", "storage", "unlimitedStorage"],
+	"permissions": ["declarativeContent", "browsingData", "tabs", "scripting", "storage"],
 	"host_permissions": ["*://*.voxiom.io/*"],
 	"content_scripts": [
 		{
 			"run_at": "document_end",
 			"matches": ["*://*.voxiom.io/*"],
 			"js": [
+				"assets/js/utils.js",
 				"assets/js/content_script.js"
 			]
 		}
@@ -20,10 +21,7 @@
 	}],	
 	"externally_connectable": {
 	  "matches": ["*://*.voxiom.io/*"]
-	},	
-	"background": {
-		"service_worker": "assets/js/background.js"
-	},	
+	},
 	"action": {
 		"default_title": "Voxiom Community Updater",
 		"default_icon": "assets/icons/favicon-32x32.png",
