fixing memory limit on converted to base64, now save just link, on every page load, convert again that url

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"description": "Voxiom Community Updater",
 	"version": "0.0.7",
 	"manifest_version": 3,
-	"permissions": ["declarativeContent", "browsingData", "tabs", "scripting", "storage"],
+	"permissions": ["declarativeContent", "browsingData", "tabs", "scripting", "storage", "unlimitedStorage"],
 	"host_permissions": ["*://*/*"],
 	"content_scripts": [
 		{
@@ -11,6 +11,7 @@
 			"matches": ["*://*.voxiom.io/*"],
 			"js": [
 				"assets/js/utils.js",
+				"assets/js/long_term_messages.js",
 				"assets/js/features/change_bg/injected__bg-change.js",
 				"assets/js/features/the_font_changing/injected__ft-change.js",
 				"assets/js/features/the_font_size_changing/injected__fs-change.js",
